Improved AI transactions